fit 500 hidden by turbo + fix add-file JS controller

--- a/app/assets/stylesheets/components/_loading-spinner.scss
+++ b/app/assets/stylesheets/components/_loading-spinner.scss
@@ -14,8 +14,8 @@
   border-color: $yellow transparent $yellow transparent;
   animation: lds-dual-ring 1.2s linear infinite;
   &.small{
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     border: 4px solid $yellow;
     border-color: $yellow transparent $yellow transparent;
   }
